[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "slack-api-sdk-apimatic"
description = "Slack API"
version = "1.1.2"
readme = "README.md"
keywords = []
dependencies = ["apimatic-core~=0.2.0, >= 0.2.24", "apimatic-core-interfaces~=0.1.0, >= 0.1.8", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.10", "python-dotenv>=0.21, <2.0"]
classifiers = []
requires-python = ">=3.7"
[[project.authors]]
name = "Slack Developers"
email = "sohail.shahbaz@apimatic.io"

[project.urls]
Documentation = "https://docs.slack.dev/apis/"
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
